# make_easy_mas

./: README.md  conf_example.env  main.py  pyproject.toml
examples/: llm_as_judge.py  mas_launch.py  pipeline.py  playground_pipeline.py  plyground_mas_launch.py  prompts.py  state.py
examples/agents/: example_agents.ipynb
examples/connectors/: llm_connectors.py
examples/tools/00-introduction/: README.md
examples/tools/00-tools-introduction/: README.md  example.ipynb  example.py  example_marimo.py
examples/tools/01-getting-started-mcp/: README.md
examples/tools/01-mcp-creation/: FAQ.md  README.md  example.ipynb  example.py  example_marimo.py  example_stdio.py  server.py  server_stdio.py
examples/tools/01-mcp-creation/combined-server/: README.md  example.ipynb  example_combined.py  example_marimo.py  math_server.py  server_combined.py  text_server.py
examples/tools/02-advanced-mcp/: README.md
examples/tools/02-mcp-remote/: README.md  example.ipynb  example.py  example_marimo.py
examples/tools/playground_tools/: example_image_processing.py  example_python_repl.py  example_web_search.py  tools.py
examples/traces/: trace_15955767b93b11bd0f53918e8899d6ed.json  trace_19400f54ed9b905fa11c6c51c1af1ca8.json  trace_550d8604dd43e4fff2fa3378197129e6.json
mas_lib/: prompts.py  tools.py  utils.py
